small bug fixed